Closed Bug 1715477 Opened 4 years ago Closed 4 years ago

[Wayland] Content menu is opened on wrong position when bookmark menu is shown

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- wontfix
firefox91 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Content menu is opened on wrong position when bookmark menu is shown. It's because we don't recalculate popup hierarchy after popup close.

Priority: -- → P3
  • Split WaylandPopupHierarchyUpdateByLayout() to WaylandPopupHierarchyHideByLayout() and WaylandPopupHierarchyMarkByLayout().
    When a popup is closed we need to mark ective popups again which is done by WaylandPopupHierarchyMarkByLayout().

  • Allow move-to-rect poupup positioning only when it matches layout and is anchored or it's the first popup attached to toplevel.

Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/ac08d8af9935 [Wayland] Update popup hierarchy when we close popup, r=jhorak

Set release status flags based on info from the regressing bug 1710436

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

This is a minor regression from bug 1710436, we may consider to uplift to beta.

Regressions: 1716191

The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
If yes, don't forget to request an uplift for the patches in the regression caused by this fix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(stransky)

Let's keep it at 91 as it introduces some other regressions.

Flags: needinfo?(stransky)
Flags: qe-verify+

Can you please provide more specific steps to reproduce this issue, because I was not able to do so. I tried to reproduce the issue using Nightly from 2021-06-06 on macOS 10.15.

Flags: needinfo?(stransky)

(In reply to Oana Botisan, Desktop Release QA from comment #8)

Can you please provide more specific steps to reproduce this issue, because I was not able to do so. I tried to reproduce the issue using Nightly from 2021-06-06 on macOS 10.15.

This is Linux / Wayland issue. Can be reproduced in Wayland environment, for instance on Fedora 33/34 / Gnome or Ubuntu 21.04 / Gnome.

Flags: needinfo?(stransky)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: