Bug 1715477 [Wayland] Update popup hierarchy when we close popup, r=jhorak

- Split WaylandPopupHierarchyUpdateByLayout() to WaylandPopupHierarchyHideByLayout() and WaylandPopupHierarchyMarkByLayout().
  When a popup is closed we need to mark ective popups again which is done by WaylandPopupHierarchyMarkByLayout().

- Allow move-to-rect poupup positioning only when it matches layout and is anchored or it's the first popup attached to toplevel.

Differential Revision: https://phabricator.services.mozilla.com/D117271